--- a/provider-dev.yml
+++ b/provider-dev.yml
@@ -2,7 +2,7 @@ name: chenjf-bus
 
 spring:
   rabbitmq:
-    addresses: 192.168.137.129
+    host: 192.168.137.129
     port: 5672
     username: guest
     password: guest
